<resources>
    <string name="app_name">MarronLucia1Eva</string>
    <string name="presentacion">Lucía Marrón Díaz 2º DAM Programación multimedia y dispositivos móviles</string>
    <string name="calculadora">Calculadora</string>
    <string name="correo">Correo</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="division">/</string>
    <string name="multiplicacion">X</string>
    <string name="inv">INV</string>
    <string name="borrar">BORRAR</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="imagen">Imagen</string>
    <string name="titulo">Enviar correo a: </string>
    <string name="asunto">Asunto:</string>
    <string name="contenido">Mensaje:</string>
    <string name="aceptar">ENVIAR</string>
    <string name="puntuacion">Puntuación:</string>
    <string name="aviso">Existen campos vacíos</string>
</resources>