<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="@color/black"
    tools:context=".Principal">

    <TextView
        android:id="@+id/textViewAnimado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="false"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/presentacion"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <ImageButton
        android:id="@+id/imagebuttonnew"
        android:layout_width="180dp"
        android:layout_height="177dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="122dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/calculadora"
        android:scaleType="fitCenter"
        android:src="@drawable/calculadora"
        app:layout_constraintBottom_toTopOf="@+id/imagebuttonnew2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAnimado"
        app:layout_constraintVertical_bias="0.266" />

    <ImageButton
        android:id="@+id/imagebuttonnew2"
        android:layout_width="191dp"
        android:layout_height="158dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/correo"
        android:scaleType="centerInside"
        android:src="@drawable/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="313dp"
        android:layout_height="66dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/portada"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toTopOf="@+id/textViewAnimado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>