<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/milayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisoscuro">

    <EditText
        android:id="@+id/asunto"
        android:layout_width="284dp"
        android:layout_height="52dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="172dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="264dp"
        android:text="@string/asunto"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/asunto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="284dp"
        android:layout_height="52dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contenido"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asunto" />

    <EditText
        android:id="@+id/mensaje"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginBottom="27dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="16dp"
        android:text="@string/puntuacion"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensaje"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/black"
        android:foregroundTint="@color/black"
        android:indeterminate="false"
        android:max="10"
        android:progress="0"
        android:progressBackgroundTint="@color/black"
        android:progressTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensaje" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/verdetexto"
        android:text="@string/aceptar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/puntuacionnum"
        android:layout_width="67dp"
        android:layout_height="49dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="176dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/mensaje" />

</androidx.constraintlayout.widget.ConstraintLayout>